--- a/index.html
+++ b/index.html
@@ -1,1 +1,164 @@
-hello world
+<!doctype html>
+
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+
+  <title>Corentin Serrie</title>
+  <meta name="description" content="Portfolio site for independent game developer Corentin Serrie.">
+  <meta name="author" content="Corentin Serrie">
+
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+</head>
+
+<body>
+  <div id="site">
+    <header class="intro">
+      <h1 class="intro__hello">Hello!</h1>
+      <div class="intro__wrap">
+        <img class="intro__icon" src="images/Icon_Logo.jpg" alt="Brand Icon" />
+        <h2 class="intro__tagline">I'm
+          <span class="name">Corentin Serrie</span>, a master student and aspiring game developer, who loves to discuss game design and implement interesting mechanics.
+        </h2>
+      </div>
+      <h3 class="intro__contact">Got an interesting project? Send me a message at
+        <span>
+          <a href="mailto:info@joebrogers.com" target="_blank" class="highlight-link">serrie.corentin@gmail.com</a>
+        </span>
+      </h3>
+    </header>
+    
+    <section class="section background" data-sr>
+      <div class="section__title">
+        Background
+      </div>
+      <div class="section__content">
+      	<p>I'm a student in Copenhagen, currently pursuing the <a class="underline-link" href="https://www.dtu.dk/english/education/msc/programmes/digital_media_engineering" target="_blank">Digital Media Engineering master of DTU</a> in <strong>Copenhagen</strong>, after having studied at <a class="underline-link" href="https://www.centralesupelec.fr/en">Central Paris</a> in France. I will graduate in summer 2020, after having finished my master thesis, focusing on the process of open development in game creation.</p>
+      	<p>I started really getting into game development in my gap year in 2017, when after 6 month developing prototypes for various companies with other students of the <a class="underline-link" href="https://paris-digital-lab.com/digital-tech-year/">Digital Tech Year</a>, I joined Ubisoft Montreal for an internship. This was a really good oportunity to get insight into this industry, and got me craving for more. I then integrated DTU in hopes of joining the <a class="underline-link" href="http://www.dadiu.dk/semester">DADIU</a> program, which I did in fall 2018 as a lead programmer. This has been my best experience so far, and I hope to get to work on similar projects in the future. In the meantime, I am finishing my studies while working part-time developing an app for <a class="underline-link" href="https://www.r2n.dk/en/">R2N</a>.</p>
+      </div>
+    </section>
+
+    <section class="section skills" data-sr>
+      <div class="section__title">Skills</div>
+      <div class="section__content">
+        <div class="skillz">
+          <div class="skillz__category">
+            <div class="skillz__category__label">Languages</div>
+            <ul>
+              <li class="skillz__category__item">C++</li>
+              <li class="skillz__category__item">C#</li>
+              <li class="skillz__category__item">JavaScript</li>
+              <li class="skillz__category__item">Java</li>
+            </ul>
+          </div>
+          <div class="skillz__category">
+            <div class="skillz__category__label">Engines / Frameworks</div>
+            <ul>
+              <li class="skillz__category__item"><a class="underline-link" href="https://unity3d.com/" target="_blank">Unity</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://www.unrealengine.com" target="_blank">Unreal 4</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://reactjs.org/" target="_blank">React</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://nodejs.org/en/" target="_blank">Node.js</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://www.mongodb.com/" target="_blank">mongoDB</a></li>
+            </ul>
+          </div>
+          <div class="skillz__category">
+            <div class="skillz__category__label">Tools</div>
+            <ul>
+              <li class="skillz__category__item"><a class="underline-link" href="https://git-scm.com/" target="_blank">Git</a> &amp; <a class="underline-link" href="https://github.com" target="_blank">Github</a> / <a class="underline-link" href="https://about.gitlab.com/" target="_blank">GitLab</a> / <a class="underline-link" href="https://bitbucket.org/" target="_blank">BitBucket</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://www.perforce.com/" target="_blank">Perforce</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://trello.com/" target="_blank">Trello</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://www.atlassian.com/software/jira" target="_blank">Jira</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://hacknplan.com/" target="_blank">HacknPlan</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section featured-projects" data-sr>
+      <div class="section__title">My Projects</div>
+      <div class="section__content">
+        <div class="project Heartfelt">
+          <iframe class="project__pic" width="700" alt="Heartfelt Banner" frameborder="0" allowfullscreen
+			src="https://www.youtube.com/embed/iFAfWFxKM7g">
+		  </iframe>
+          <figcaption class="project__caption">
+            <div class="project__name">
+              <a href="https://play.google.com/store/apps/details?id=dk.dadiu.heartfelt" target="_blank">Heartfelt</a>
+            </div>
+            <p>I worked as the Lead Programmer on this game during the 6 month DADIU program. Heartfelt is an isometric puzzle game in which you interact with the environment by using your weakest point. In order to navigate through the levels, you throw Alex’s heart to activate pressure plates, open doors or lure enemies into traps. However, once it falls to the ground it becomes vulnerable, and you must find a way to retrieve it before the enemies do too much damage to it. </p>
+          </figcaption>
+        </div>
+
+        <div class="project Blob">
+          <figure class="project__pic">
+            <a href="https://github.com/CorentinSerrie/Blob" target="_blank">
+              <img src="images/Banner_Blob.gif" alt="Blob Banner">
+            </a>
+          </figure>
+          <figcaption class="project__caption">
+            <div class="project__name">
+              <a href="https://github.com/CorentinSerrie/Blob" target="_blank">Blob</a>
+            </div>
+            <p>Blob is a small tech demo I developed on my own, as a character for a 3D platformer. I ended up spending quite some time manipulating the colliders and the different spring joints available in Unity to get this result : a blob that adapts to whatever geometry it encounters, and have a nice jumping animation.</p>
+        </div>
+
+        <div class="project Kiitsu">
+          <iframe class="project__pic" width="700" alt="Kiitsu Banner" frameborder="0" allowfullscreen
+			src="https://www.youtube.com/embed/0B6O5zHdu7Q">
+		  </iframe>
+          <figcaption class="project__caption">
+            <div class="project__name">
+              <a href="https://kiitsu.l4th.fr/" target="_blank">Kiitsu</a>
+            </div>
+            <p>Developed with four other Centrale Paris students using Unreal Engine, Kiitsu is an exploration/puzzle game where the main character can switch from one world to the other. This was a first experience for all of us and a lot of fun. The game is even available on steam !</p>
+          </figcaption>
+        </div>
+
+        <div class="project Shmup">
+          <figure class="project__pic">
+            <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">
+              <img src="images/Banner_Shmup.jpg" alt="Shmup Banner">
+            </a>
+          </figure>
+          <figcaption class="project__caption">
+            <div class="project__name">
+              <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">Blob</a>
+            </div>
+            <p>My very first game ! I coded this Shoot'Em Up as a way to learn android as a beginner. I refined it along the years, and it is now available on the play store. Give it a try, and let me know if you beat my highscore :)</p>
+          </figcaption>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__copyright">
+        <div class="top">
+          <span>Developed by Corentin Serrie | 2019</span>
+        </div>
+        <div class="bottom">
+          <span>Heavily inspired by Joeb Rogers</span>
+        </div>
+      </div>
+      <div class="footer__links">
+        <a href="mailto:serrie.corentin@gmail.com" target="_blank" title="email">
+          <span class="text">email</span></a>
+        <a href="https://github.com/CorentinSerrie" target="_blank" title="github">
+          <span class="text">github</span></a>
+        <a href="https://www.linkedin.com/in/corentinserrie" target="_blank" title="linkedin">
+          <span class="text">linkedin</span></a>
+      </div>
+    </footer>
+
+    <button id="top-button" style="display: none;">
+      <img src="images/Icon_Top.png" alt=""> </button>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+</body>
+
+</html>
