--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
 <body>
@@ -126,7 +125,7 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">Blob</a>
+              <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">Shmup</a>
             </div>
             <p>My very first game ! I coded this Shoot'Em Up as a way to learn android as a beginner. I refined it along the years, and it is now available on the play store. Give it a try, and let me know if you beat my highscore :)</p>
           </figcaption>
