--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     </section>
 
     <section class="section skills" data-sr>
-      <div class="section__title">Skills</div>
+      <div class="section__title">
+        Skills
+      </div>
       <div class="section__content">
         <div class="skillz">
           <div class="skillz__category">
@@ -78,7 +80,9 @@
     </section>
 
     <section class="section featured-projects" data-sr>
-      <div class="section__title">My Projects</div>
+      <div class="section__title">
+        My Projects
+   	  </div>
       <div class="section__content">
         <div class="project Heartfelt">
           <iframe class="project__pic" width="700" alt="Heartfelt Banner" frameborder="0" allowfullscreen
