changed the Shmup banner for a gif

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="project__name">
               <a href="https://github.com/CorentinSerrie/Blob" target="_blank">Blob</a>
             </div>
-            <p>Blob is a small tech demo I developed on my own, as a character for a 3D platformer. I ended up spending quite some time manipulating the colliders and the different spring joints available in Unity to get this result : a blob that adapts to whatever geometry it encounters, and have a nice jumping animation.</p>
+            <p>Blob is a small tech demo I developed on my own, as a character for a 3D platformer. I ended up spending quite some time manipulating the colliders and the different spring joints available in Unity to get this result : a blob that adapts to whatever geometry it encounters, and has a nice jumping animation.</p>
         </div>
 
         <div class="project Kiitsu">
@@ -124,7 +124,7 @@
         <div class="project Shmup">
           <figure class="project__pic">
             <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">
-              <img src="images/Banner_Shmup.jpg" alt="Shmup Banner">
+              <img src="images/Banner_Shmup.gif" alt="Shmup Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
