updated link to shmup

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 
         <div class="project Shmup">
           <figure class="project__pic">
-            <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">
+            <a href="https://play.google.com/store/apps/details?id=com.serriec.shmup" target="_blank">
               <img src="images/Banner_Shmup.gif" alt="Shmup Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">Shmup</a>
+              <a href="https://play.google.com/store/apps/details?id=com.serriec.shmup" target="_blank">Shmup</a>
             </div>
             <p>My very first game ! I coded this Shoot'Em Up as a way to learn android as a beginner. I refined it along the years, and it is now available on the play store. Give it a try, and let me know if you beat my highscore :)</p>
           </figcaption>
