updated description and cleaned CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="intro__wrap">
         <img class="intro__icon" src="images/Icon_Logo.jpg" alt="Brand Icon" />
         <h2 class="intro__tagline">I'm
-          <span class="name">Corentin Serrie</span>, a master student and aspiring game developer, who loves to discuss game design and implement interesting mechanics.
+          <span class="name">Corentin Serrie</span>, an aspiring game developer, who loves to discuss game design and implement interesting mechanics.
         </h2>
       </div>
       <h3 class="intro__contact">Got an interesting project? Send me a message at
@@ -35,8 +35,8 @@
         Background
       </div>
       <div class="section__content">
-      	<p>I'm a student in Copenhagen, currently pursuing the <a class="underline-link" href="https://www.dtu.dk/english/education/msc/programmes/digital_media_engineering" target="_blank">Digital Media Engineering master of DTU</a> in <strong>Copenhagen</strong>, after having studied at <a class="underline-link" href="https://www.centralesupelec.fr/en">Central Paris</a> in France. I will graduate in summer 2020, after having finished my master thesis, focusing on the process of open development in game creation.</p>
-      	<p>I started really getting into game development in my gap year in 2017, when after 6 month developing prototypes for various companies with other students of the <a class="underline-link" href="https://paris-digital-lab.com/digital-tech-year/">Digital Tech Year</a>, I joined Ubisoft Montreal for an internship. This was a really good oportunity to get insight into this industry, and got me craving for more. I then integrated DTU in hopes of joining the <a class="underline-link" href="http://www.dadiu.dk/semester">DADIU</a> program, which I did in fall 2018 as a lead programmer. This has been my best experience so far, and I hope to get to work on similar projects in the future. In the meantime, I am finishing my studies while working part-time developing an app for <a class="underline-link" href="https://www.r2n.dk/en/">R2N</a>.</p>
+      	<p>I am a recently graduated student from the <a class="underline-link" href="https://www.dtu.dk/english/education/msc/programmes/digital_media_engineering" target="_blank">Digital Media Engineering master of DTU</a> in Copenhagen, after having studied at <a class="underline-link" href="https://www.centralesupelec.fr/en">Centrale Paris</a> in France. Having recently finished my master thesis, focusing on the process of open development in game creation, I am currently looking for a job in the Video Game industry, preferably in Copenhagen.</p>
+      	<p>I started really getting into game development in my gap year in 2017, when after 6 month developing prototypes for various companies with other students of the <a class="underline-link" href="https://paris-digital-lab.com/digital-tech-year/">Digital Tech Year</a>, I joined Ubisoft Montreal for an internship. This was a really good oportunity to get insight into this industry, and got me craving for more. I then integrated DTU in hopes of joining the <a class="underline-link" href="http://www.dadiu.dk/semester">DADIU</a> program, which I did in fall 2018 as a lead programmer. This has been my best experience so far, and I hope to get to work on similar projects in the future.</p>
       </div>
     </section>
 
@@ -85,12 +85,11 @@
    	  </div>
       <div class="section__content">
         <div class="project Heartfelt">
-          <iframe class="project__pic" width="700" alt="Heartfelt Banner" frameborder="0" allowfullscreen
-			src="https://www.youtube.com/embed/iFAfWFxKM7g">
-		  </iframe>
+          <iframe class="project__pic" width="700" alt="Heartfelt Banner" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/iFAfWFxKM7g">
+		      </iframe>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://play.google.com/store/apps/details?id=dk.dadiu.heartfelt" target="_blank">Heartfelt</a>
+              <a class="underline-link" href="https://play.google.com/store/apps/details?id=dk.dadiu.heartfelt" target="_blank">Heartfelt</a>
             </div>
             <p>I worked as the Lead Programmer on this game during the 6 month DADIU program. Heartfelt is an isometric puzzle game in which you interact with the environment by using your weakest point. In order to navigate through the levels, you throw Alex’s heart to activate pressure plates, open doors or lure enemies into traps. However, once it falls to the ground it becomes vulnerable, and you must find a way to retrieve it before the enemies do too much damage to it. </p>
           </figcaption>
@@ -104,18 +103,17 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://github.com/CorentinSerrie/Blob" target="_blank">Blob</a>
+              <a class="underline-link" href="https://github.com/CorentinSerrie/Blob" target="_blank">Blob</a>
             </div>
             <p>Blob is a small tech demo I developed on my own, as a character for a 3D platformer. I ended up spending quite some time manipulating the colliders and the different spring joints available in Unity to get this result : a blob that adapts to whatever geometry it encounters, and has a nice jumping animation.</p>
         </div>
 
         <div class="project Kiitsu">
-          <iframe class="project__pic" width="700" alt="Kiitsu Banner" frameborder="0" allowfullscreen
-			src="https://www.youtube.com/embed/0B6O5zHdu7Q">
-		  </iframe>
+          <iframe class="project__pic" width="700" alt="Kiitsu Banner" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/0B6O5zHdu7Q">
+		      </iframe>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://kiitsu.l4th.fr/" target="_blank">Kiitsu</a>
+              <a class="underline-link" href="https://kiitsu.l4th.fr/" target="_blank">Kiitsu</a>
             </div>
             <p>Developed with four other Centrale Paris students using Unreal Engine, Kiitsu is an exploration/puzzle game where the main character can switch from one world to the other. This was a first experience for all of us and a lot of fun. The game is even available on steam !</p>
           </figcaption>
@@ -129,7 +127,7 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://play.google.com/store/apps/details?id=com.serriec.shmup" target="_blank">Shmup</a>
+              <a class="underline-link" href="https://play.google.com/store/apps/details?id=com.serriec.shmup" target="_blank">Shmup</a>
             </div>
             <p>My very first game ! I coded this Shoot'Em Up as a way to learn android as a beginner. I refined it along the years, and it is now available on the play store. Give it a try, and let me know if you beat my highscore :)</p>
           </figcaption>
