--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="project__name">
               <a class="underline-link" href="https://github.com/CorentinSerrie/Blob" target="_blank">Blob</a>
             </div>
-            <p>Blob is a small tech demo I developed on my own, as a character for a 3D platformer. I ended up spending quite some time manipulating the colliders and the different spring joints available in Unity to get this result : a blob that adapts to whatever geometry it encounters, and has a nice jumping animation.</p>
+            <p>Blob is a small tech demo I developed on my own, as a character for a 3D platformer. I ended up spending quite some time manipulating the colliders and the different spring joints available in Unity to get this result : a blob that adapts to whatever geometry it encounters, and has a nice jumping animation. I even wrote <a class="underline-link" href="images/Blob.pdf" target="_blank">a small paper</a> about it !</p>
         </div>
 
         <div class="project Kiitsu">
