--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="intro">
       <h1 class="intro__hello">Hello!</h1>
       <div class="intro__wrap">
-        <img class="intro__icon" src="images/Icon_Logo.jpg" alt="Brand Icon" />
+        <img class="intro__icon" src="images/Icon_Logo.png" alt="Brand Icon" />
         <h2 class="intro__tagline">I'm
           <span class="name">Corentin Serrie</span>, an aspiring game developer, who loves to discuss game design and implement interesting mechanics.
         </h2>
