--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <header class="intro">
       <h1 class="intro__hello">Hello!</h1>
       <div class="intro__wrap">
-        <img class="intro__icon" src="images/Icon_Logo.png" alt="Brand Icon" />
+        <img class="intro__icon" src="images/Corentin-scaled.jpg" alt="Profile Picture" />
         <h2 class="intro__tagline">I'm
-          <span class="name">Corentin Serrie</span>, an aspiring game developer, who loves to discuss game design and implement interesting mechanics.
+          <span class="name">Corentin Serrie</span>, a game programmer who loves to talk about game design and implement interesting mechanics.
         </h2>
+		<h3 class="intro__contact">Got an interesting project? Send me a message at
+		  <span>
+			<a href="mailto:serrie.corentin@gmail.com" target="_blank" class="highlight-link">serrie.corentin@gmail.com</a>
+		  </span>
+		</h3>
       </div>
-      <h3 class="intro__contact">Got an interesting project? Send me a message at
-        <span>
-          <a href="mailto:info@joebrogers.com" target="_blank" class="highlight-link">serrie.corentin@gmail.com</a>
-        </span>
-      </h3>
     </header>
     
     <section class="section background" data-sr>
@@ -35,8 +35,11 @@
         Background
       </div>
       <div class="section__content">
-      	<p>I am a recently graduated student from the <a class="underline-link" href="https://www.dtu.dk/english/education/msc/programmes/digital_media_engineering" target="_blank">Digital Media Engineering master of DTU</a> in Copenhagen, after having studied at <a class="underline-link" href="https://www.centralesupelec.fr/en">Centrale Paris</a> in France. Having recently finished my master thesis, focusing on the process of open development in game creation, I am currently looking for a job in the Video Game industry, preferably in Copenhagen.</p>
-      	<p>I started really getting into game development in my gap year in 2017, when after 6 month developing prototypes for various companies with other students of the <a class="underline-link" href="https://paris-digital-lab.com/digital-tech-year/">Digital Tech Year</a>, I joined Ubisoft Montreal for an internship. This was a really good oportunity to get insight into this industry, and got me craving for more. I then integrated DTU in hopes of joining the <a class="underline-link" href="http://www.dadiu.dk/semester">DADIU</a> program, which I did in fall 2018 as a lead programmer. This has been my best experience so far, and I hope to get to work on similar projects in the future.</p>
+      	<p>I am a graduate from <a class="underline-link" href="https://www.centralesupelec.fr/en" target="_blank">Centrale Paris</a> in france, and from the <a class="underline-link" href="https://www.dtu.dk/english/education/graduate/msc-programmes/human-centered-artificial-intelligence/specialization/computer-games" target="_blank">DTU</a> in Copenhagen, where I specialized in video games, and wrote my thesis on Open Development in video games production.</p>
+ 
+		<p>I started really getting into game development in my gap year in 2017, when after 6 month developing prototypes for various companies with other students of the <a class="underline-link" href="https://paris-digital-lab.com/digital-tech-year/" target="_blank">Digital Tech Year</a>, I joined Ubisoft Montreal for an internship. This was a really good oportunity to get insight into this industry, and got me craving for more. I then integrated DTU in the hope of joining the <a class="underline-link" href="https://www.dadiu.dk/programme" target="_blank">DADIU</a> program, which I did in fall 2018 as a lead programmer. This was an amazing experience, where I honed the leadership skills taught to us at Centrale. It cemented my will to work in this industry, preferably with small teams iterating quickly on interesting gameplay.</p>
+ 
+		<p>I have since joined <a class="underline-link" href="https://lightbulbcrew.fr/" target="_blank">Lightbulb Crew</a>, where I've been working on <a class="underline-link" href="https://shorelinegames.com/nova-hearts/" target="_blank">Nova Hearts</a> for the past years. There, I experienced all the steps of a professional production, and grew an interest in developping tools and automating processes to facilitate the work of my team. I became responsible of our CI/CD platform, improving it along the way, and it is now a valuable asset to the company.</p>
       </div>
     </section>
 
@@ -49,8 +52,10 @@
           <div class="skillz__category">
             <div class="skillz__category__label">Languages</div>
             <ul>
-              <li class="skillz__category__item">C++</li>
               <li class="skillz__category__item">C#</li>
+              <li class="skillz__category__item">GDScript</li>
+              <li class="skillz__category__item">Powershell</li>
+              <li class="skillz__category__item">C++</li>
               <li class="skillz__category__item">JavaScript</li>
               <li class="skillz__category__item">Java</li>
             </ul>
@@ -59,6 +64,7 @@
             <div class="skillz__category__label">Engines / Frameworks</div>
             <ul>
               <li class="skillz__category__item"><a class="underline-link" href="https://unity3d.com/" target="_blank">Unity</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://godotengine.org/" target="_blank">Godot</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://www.unrealengine.com" target="_blank">Unreal 4</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://reactjs.org/" target="_blank">React</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://nodejs.org/en/" target="_blank">Node.js</a></li>
@@ -69,8 +75,10 @@
             <div class="skillz__category__label">Tools</div>
             <ul>
               <li class="skillz__category__item"><a class="underline-link" href="https://git-scm.com/" target="_blank">Git</a> &amp; <a class="underline-link" href="https://github.com" target="_blank">Github</a> / <a class="underline-link" href="https://about.gitlab.com/" target="_blank">GitLab</a> / <a class="underline-link" href="https://bitbucket.org/" target="_blank">BitBucket</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://www.plasticscm.com/" target="_blank">PlastiSCM</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://www.perforce.com/" target="_blank">Perforce</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://trello.com/" target="_blank">Trello</a></li>
+              <li class="skillz__category__item"><a class="underline-link" href="https://airtable.com/" target="_blank">Airtable</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://www.atlassian.com/software/jira" target="_blank">Jira</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://hacknplan.com/" target="_blank">HacknPlan</a></li>
             </ul>
@@ -84,14 +92,57 @@
         My Projects
    	  </div>
       <div class="section__content">
-        <div class="project Heartfelt">
-          <iframe class="project__pic" width="700" alt="Heartfelt Banner" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/iFAfWFxKM7g">
-		      </iframe>
+		<div class="project Bubble Factory">
+          <figure class="project__pic">
+            <a href="https://lumixvaz.itch.io/the-client-wants-a-round-bubble" target="_blank">
+              <img src="images/Banner_Image_Round_Bubble.png" alt="Bubble Banner">
+            </a>
+          </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a class="underline-link" href="https://play.google.com/store/apps/details?id=dk.dadiu.heartfelt" target="_blank">Heartfelt</a>
+              <a class="underline-link" href="https://lumixvaz.itch.io/the-client-wants-a-round-bubble" target="_blank">The client wants a Round Bubble</a>
             </div>
-            <p>I worked as the Lead Programmer on this game during the 6 month DADIU program. Heartfelt is an isometric puzzle game in which you interact with the environment by using your weakest point. In order to navigate through the levels, you throw Alex’s heart to activate pressure plates, open doors or lure enemies into traps. However, once it falls to the ground it becomes vulnerable, and you must find a way to retrieve it before the enemies do too much damage to it. </p>
+            <p>I recently participated in the Global Game Jam with some friends, where we created this small game about reshaping weirdly shaped bubbles as close as possible to a round... Using only weird transformations.<br>
+This was a first try at using Godot for me. I was responsible for the entire code base, and we managed to ship our game in the time frame of the jam without unexpected bug or stress.</p>
+			<div class="project__name">
+				<strong>Tech</strong>
+            </div>
+            <p>Godot, Git and Github, Miro</p>
+		  </figcaption>
+        </div>
+		
+		<div class="project Nova Hearts">
+          <div class="project__pic project__link">
+			<iframe alt="Nova Hearts Banner" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/eanxZXb3zhU">
+			</iframe>
+		  </div>
+          <figcaption class="project__caption">
+            <div class="project__name">
+              <a class="underline-link" href="https://shorelinegames.com/nova-hearts/" target="_blank">Nova Hearts</a>
+            </div>
+            <p>My first professional production! Nova hearts is a visual novel with turn based combats taking place in a small town where superpowered heroes and villains suddenly start popping up.<br>
+During this production, I was mostly responsible for gameplay programming, but I also had a huge share in creating the tools we used to facilitate our work, like CI/CD using jenkins. </p>
+			<div class="project__name">
+				<strong>Tech</strong>
+            </div>
+            <p>Unity, PlasticSCM, Jenkins, Powershell, Trello, Airtable, Miro</p>
+		  </figcaption>
+        </div>
+
+        <div class="project Heartfelt">
+          <div class="project__pic project__link">
+			<iframe alt="Heartfelt Banner" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/iFAfWFxKM7g">
+		      </iframe>
+		  </div>
+          <figcaption class="project__caption">
+            <div class="project__name">
+              <a class="underline-link" href="https://www.dadiu.dk/games/heartfelt" target="_blank">Heartfelt</a>
+            </div>
+            <p>I worked as the Lead Programmer on this game during the 6 month DADIU program. Heartfelt is an isometric puzzle game in which you interact with the environment by using your weakest point. In order to navigate through the levels, you throw Alex’s heart to activate pressure plates, open doors or lure enemies into traps. However, once it falls to the ground it becomes vulnerable, and you must find a way to retrieve it before the enemies do too much damage to it.</p>
+			<div class="project__name">
+				<strong>Tech</strong>
+            </div>
+            <p>Unity, Git, Hack'n Plan</p>
           </figcaption>
         </div>
 
@@ -106,31 +157,46 @@
               <a class="underline-link" href="https://github.com/CorentinSerrie/Blob" target="_blank">Blob</a>
             </div>
             <p>Blob is a small tech demo I developed on my own, as a character for a 3D platformer. I ended up spending quite some time manipulating the colliders and the different spring joints available in Unity to get this result : a blob that adapts to whatever geometry it encounters, and has a nice jumping animation. I even wrote <a class="underline-link" href="images/Blob.pdf" target="_blank">a small paper</a> about it !</p>
-        </div>
+			<div class="project__name">
+				<strong>Tech</strong>
+            </div>
+            <p>Unity</p>
+          </figcaption>      
+		</div>
 
         <div class="project Kiitsu">
-          <iframe class="project__pic" width="700" alt="Kiitsu Banner" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/0B6O5zHdu7Q">
+          <div class="project__pic project__link">
+			<iframe alt="Kiitsu Banner" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/Q3zpcgnyOi8">
 		      </iframe>
+		  </div>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a class="underline-link" href="https://kiitsu.l4th.fr/" target="_blank">Kiitsu</a>
+              <a class="underline-link" href="https://store.steampowered.com/app/686270/Kiitsu/" target="_blank">Kiitsu</a>
             </div>
-            <p>Developed with four other Centrale Paris students using Unreal Engine, Kiitsu is an exploration/puzzle game where the main character can switch from one world to the other. This was a first experience for all of us and a lot of fun. The game is even available on steam !</p>
+            <p>Developed with four other Centrale Paris students using Unreal Engine, Kiitsu is an exploration/puzzle game where the main character can switch from one world to the other. This was a first experience for all of us and a lot of fun. The game is even available <a class="underline-link" href="https://store.steampowered.com/app/686270/Kiitsu/" target="_blank">on steam</a>!</p>
+			<div class="project__name">
+				<strong>Tech</strong>
+            </div>
+            <p>Unreal, Git</p>
           </figcaption>
         </div>
 
         <div class="project Shmup">
           <figure class="project__pic">
-            <a href="https://play.google.com/store/apps/details?id=com.serriec.shmup" target="_blank">
+            <a href="https://github.com/CorentinSerrie/Shmup" target="_blank">
               <img src="images/Banner_Shmup.gif" alt="Shmup Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a class="underline-link" href="https://play.google.com/store/apps/details?id=com.serriec.shmup" target="_blank">Shmup</a>
+              <a class="underline-link" href="https://github.com/CorentinSerrie/Shmup" target="_blank">Shmup</a>
             </div>
-            <p>My very first game ! I coded this Shoot'Em Up as a way to learn android as a beginner. I refined it along the years, and it is now available on the play store. Give it a try, and let me know if you beat my highscore :)</p>
-          </figcaption>
+            <p>My very first game ! I coded this Shoot'Em Up to learn android as a beginner. At the time, I didn't know about game engines, so I coded everything in java for android, using canvas to display basic shapes, and basically creating my own mini game engine.</p>
+			<div class="project__name">
+				<strong>Tech</strong>
+            </div>
+            <p>Android Native</p>
+         </figcaption>
         </div>
       </div>
     </section>
